Commit 11: Add app icon and splash screen
- Create quiz-themed app icon with question mark design
- Implement branded splash screen with smooth animation
- Add Material Design blue color scheme for consistent branding
- Configure modern splash screen API with adaptive icon support
- Clean up code formatting and remove unnecessary comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.MarrowQuiz">
+            android:theme="@style/Theme.MarrowQuiz.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
